--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -40,4 +40,5 @@
     <string name="no_favorite_recipes">No favorite recipes</string>
     <string name="delete_favorite_menu">Delete favorite menu</string>
     <string name="delete_all">Delete All</string>
+    <string name="share">Share</string>
 </resources>
